[gd_scene load_steps=2 format=3 uid="uid://vi7e7577qvt"]

[ext_resource type="Script" uid="uid://cia4l60d0uow4" path="res://scripts/ui/battle_hud.gd" id="1_dy3po"]

[node name="BattleHUD" type="CanvasLayer"]
script = ExtResource("1_dy3po")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TurnOrderPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TurnOrderPanel"]
layout_mode = 2

[node name="TurnOrderLabel" type="Label" parent="MarginContainer/VBoxContainer/TurnOrderPanel/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "턴 순서: 용사 → 힐러 → 보스"

[node name="CharacterStatsPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CharacterStatsList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CharacterStatsPanel"]
layout_mode = 2
